[package]
name = "ra_common"
version = "0.0.42"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Common library for RA crates."
homepage = "http://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/ra-common"
repository = "https://github.com/resolvingarchitecture/ra-common.git"
publish = true
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rand = "0.7.3"
futures = "0.3.4"
serde = "1.0.105"
serde_json = "1.0.48"

[dev-dependencies]
assert_cmd = "0.10"